# WebPrinter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  print_backend.py  pyproject.toml  requirements.txt
docker/: entrypoint.sh
static/: style.css
templates/: _job_status.html  _printer_status.html  index.html
